Fixed title alignment on Home

--- a/res/css/styles/home.css
+++ b/res/css/styles/home.css
@@ -31,6 +31,7 @@
 
 .page-container {
     margin: auto 0;
+    padding-bottom: 77px;
 }
 
 #page-one {
